labs/01-rbac-namespace-role.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: secure-demo
